# DLsummer23

./: .gitignore  Manifest.toml  README.md  pyproject.toml  references.bib
experiments/: backpropagation_example.R  ejemplo2.R
experiments/backpropagation/: backpropagation_example.jl
